<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="409dp"
    android:layout_height="729dp"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.service.ImdbDetailActivity">

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/year_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/movie_title_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/movie_title" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/year_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/rated_layout"
            app:layout_constraintTop_toBottomOf="@+id/title_layout"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/movie_year_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/movie_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/movie_year" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rated_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/genre_layout"
            app:layout_constraintTop_toBottomOf="@+id/year_layout"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/movie_rated_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/movie_rated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/movie_rated" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/genre_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/actors_layout"
            app:layout_constraintTop_toBottomOf="@+id/rated_layout"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/movie_genre_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/movie_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/movie_genre" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/actors_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/genre_layout"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/movie_actors_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/movie_actors"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/movie_actors" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>