<?xml version="1.0" encoding="utf-8"?>
<com.example.adapters.CustomView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="@dimen/_140sdp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/imdb_layout"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/movie_title_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/movie_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/year_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/imdb_layout"
        app:layout_constraintTop_toBottomOf="@+id/title_layout"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/movie_year_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/movie_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/movie_year" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/imdb_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/detail_layout"
        app:layout_constraintTop_toBottomOf="@+id/title_layout"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/movie_imdb_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/movie_imdb_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/movie_imdb" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imdb_layout"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail" />

        <ImageView
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_favorite"
            android:layout_gravity="center"/>
    </LinearLayout>

</com.example.adapters.CustomView>